feat: add FrostProjectile, RepulsorBlast, and KineticDash abilities with CooldownManager